snapshots/care/data4life/hc-result-sdk-kmp/error/0.1.1-SNAPSHOT/maven-metadata.xml.sha1
82e97225508285f00d9255ffc234547333cbf86b